# LargeTIFFTools Software
#
# Copyright (c) Christophe Deroulers, 2012-2017
#
# License: GNU General Public License v3
#

# Process this file with automake to produce Makefile.in.

bin_PROGRAMS = \
        tiffsplittiles \
        tiffmakemosaic \
        tifffastcrop

tiffsplittiles_SOURCES = tiffsplittiles.c
tiffmakemosaic_SOURCES = tiffmakemosaic.c
tifffastcrop_SOURCES = tifffastcrop.c
